--- a/ng-admin/src/meeting-management/meeting-room/room-detail/room-detail.component.html
+++ b/ng-admin/src/meeting-management/meeting-room/room-detail/room-detail.component.html
@@ -1,127 +1,126 @@
 <!-- <pro-header></pro-header> -->
-<nz-card [nzBordered]="false">
-    <nz-card [nzBordered]="false">
-        <!-- <form nz-form [formGroup]="validateForm" (ngSubmit)="save()" *ngIf="room"> -->
-        <form nz-form [formGroup]="validateForm" *ngIf="room">
-            <div nz-row>
-                <div nz-col [nzSpan]="16">
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzRequired>会议室名称</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="name" [(ngModel)]="room.name" id="name">
-                            <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('maxlength')">字符长度小于等于50</nz-form-explain>
-                            <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('required')">请输入会议室名称</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
+<nz-card [nzBordered]="false" nzTitle="任务详情">
+    <!-- <form nz-form [formGroup]="validateForm" (ngSubmit)="save()" *ngIf="room"> -->
+    <form nz-form [formGroup]="validateForm" *ngIf="room">
+        <div nz-row>
+            <div nz-col [nzSpan]="16">
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzRequired>会议室名称</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <input nz-input formControlName="name" [(ngModel)]="room.name" id="name">
+                        <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('maxlength')">字符长度小于等于50</nz-form-explain>
+                        <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('required')">请输入会议室名称</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
 
-                    <nz-form-item nz-row style="margin-bottom: 0px;">
-                        <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="roomType">会议室类型</nz-form-label>
-                        <nz-form-control nz-col [nzSm]="20" nzHasFeedback>
-                            <nz-radio-group formControlName="roomType" [(ngModel)]="room.roomType" class="mb-md">
-                                <label nz-radio [nzValue]="o.value" *ngFor="let o of roomTypes">
-                                    <span>{{o.text}}</span>
-                                </label>
-                            </nz-radio-group>
-                            <nz-form-explain *ngIf="validateForm.get('roomType').dirty&&validateForm.get('roomType').hasError('required')">请选择会议室类型</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row style="margin-bottom: 0px;">
-                        <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="layoutPattern">会议室布局</nz-form-label>
-                        <nz-form-control nz-col [nzSm]="20" nzHasFeedback>
-                            <nz-radio-group formControlName="layoutPattern" [(ngModel)]="room.layoutPattern" class="mb-md">
-                                <label nz-radio [nzValue]="o.value" *ngFor="let o of layoutPatterns">
-                                    <span>{{o.text}}</span>
-                                </label>
-                            </nz-radio-group>
-                            <nz-form-explain *ngIf="validateForm.get('layoutPattern').dirty&&validateForm.get('layoutPattern').hasError('required')">请选择会议室布局</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="planPath">会议室平面图</nz-form-label>
-                        <nz-form-control nz-col [nzSm]="20">
-                            <nz-upload class="avatar-uploader" nzAction="{{actionUrl}}" nzName="image" nzListType="picture-card" [nzShowUploadList]="false" (nzChange)="handleChange($event)">
-                                <ng-container *ngIf="!room.showPhoto">
-                                    <i class="anticon anticon-plus"></i>
-                                </ng-container>
-                                <img *ngIf="room.showPhoto" [src]="room.showPhoto" class="avatar imgSize">
-                            </nz-upload>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row style="margin-bottom: 0px;">
-                        <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="isApprove">是否需要审批</nz-form-label>
-                        <nz-form-control div nz-col [nzSm]="20" nzHasFeedback>
-                            <nz-radio-group formControlName="isApprove" [(ngModel)]="room.isApprove" class="mb-md">
-                                <label nz-radio [nzValue]="o.value" *ngFor="let o of isApproves">
-                                    <span>{{o.text}}</span>
-                                </label>
-                            </nz-radio-group>
-                            <nz-form-explain *ngIf="validateForm.get('isApprove').dirty&&validateForm.get('isApprove').hasError('required')">请选择审批类型</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row *ngIf="room.isApprove == true">
-                        <nz-form-label nz-col [nzSm]="4" nzFor="managerName">会议室管理员</nz-form-label>
-                        <nz-form-control [nzSm]="16" style="float:left" nzHasFeedback>
-                            <input nz-input readonly="readonly" placeholder="请选择管理员" formControlName="managerName" id="managerName" [(ngModel)]="room.managerName">
-                            <nz-form-explain *ngIf="validateForm.get('managerName').dirty&&validateForm.get('managerName').hasError('maxlength')">字符长度小于等于200</nz-form-explain>
-                        </nz-form-control>
-                        <nz-form-control [nzSm]="4" style="float: right;">
-                            <button nz-button type="button" nzType="primary" (click)="showModal()" style="margin-left: 20px">选择管理员</button>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="num">坐席人数</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="num" id="num" [(ngModel)]="room.num">
-                            <nz-form-explain *ngIf="validateForm.get('num').dirty&&validateForm.get('num').hasError('required')">请输入坐席人数</nz-form-explain>
-                            <nz-form-explain *ngIf="validateForm.get('num').dirty&&validateForm.get('num').hasError('pattern')">请输入正整数</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzFor="row">坐席排数</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="row" id="row" [(ngModel)]="room.row">
-                            <nz-form-explain *ngIf="validateForm.get('row').dirty&&validateForm.get('row').hasError('pattern')">请输入正整数</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzFor="column">坐席列数</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="column" id="column" [(ngModel)]="room.column">
-                            <nz-form-explain *ngIf="validateForm.get('column').dirty&&validateForm.get('column').hasError('pattern')">请输入正整数</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzFor="address">地址</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="address" id="address" [(ngModel)]="room.address">
-                            <nz-form-explain *ngIf="validateForm.get('address').dirty&&validateForm.get('address').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzFor="buildDesc">楼层信息</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="buildDesc" id="buildDesc" [(ngModel)]="room.buildDesc">
-                            <nz-form-explain *ngIf="validateForm.get('buildDesc').dirty&&validateForm.get('buildDesc').hasError('maxlength')">字符长度小于等于200</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzFor="remark">备注</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="remark" id="remark" [(ngModel)]="room.remark">
-                            <nz-form-explain *ngIf="validateForm.get('remark').dirty&&validateForm.get('remark').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzFor="column">会议室配置</nz-form-label>
-                        <nz-form-control [nzSm]="20">
-                            <nz-checkbox-group formControlName="devices" [(ngModel)]="deviceList"></nz-checkbox-group>
-                        </nz-form-control>
+                <nz-form-item nz-row style="margin-bottom: 0px;">
+                    <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="roomType">会议室类型</nz-form-label>
+                    <nz-form-control nz-col [nzSm]="20" nzHasFeedback>
+                        <nz-radio-group formControlName="roomType" [(ngModel)]="room.roomType" class="mb-md">
+                            <label nz-radio [nzValue]="o.value" *ngFor="let o of roomTypes">
+                                <span>{{o.text}}</span>
+                            </label>
+                        </nz-radio-group>
+                        <nz-form-explain *ngIf="validateForm.get('roomType').dirty&&validateForm.get('roomType').hasError('required')">请选择会议室类型</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row style="margin-bottom: 0px;">
+                    <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="layoutPattern">会议室布局</nz-form-label>
+                    <nz-form-control nz-col [nzSm]="20" nzHasFeedback>
+                        <nz-radio-group formControlName="layoutPattern" [(ngModel)]="room.layoutPattern" class="mb-md">
+                            <label nz-radio [nzValue]="o.value" *ngFor="let o of layoutPatterns">
+                                <span>{{o.text}}</span>
+                            </label>
+                        </nz-radio-group>
+                        <nz-form-explain *ngIf="validateForm.get('layoutPattern').dirty&&validateForm.get('layoutPattern').hasError('required')">请选择会议室布局</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="planPath">会议室平面图</nz-form-label>
+                    <nz-form-control nz-col [nzSm]="20">
+                        <nz-upload class="avatar-uploader" nzAction="{{actionUrl}}" nzName="image" nzListType="picture-card" [nzShowUploadList]="false" (nzChange)="handleChange($event)">
+                            <ng-container *ngIf="!room.showPhoto">
+                                <i class="anticon anticon-plus"></i>
+                            </ng-container>
+                            <img *ngIf="room.showPhoto" [src]="room.showPhoto" class="avatar imgSize">
+                        </nz-upload>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row style="margin-bottom: 0px;">
+                    <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="isApprove">是否需要审批</nz-form-label>
+                    <nz-form-control div nz-col [nzSm]="20" nzHasFeedback>
+                        <nz-radio-group formControlName="isApprove" [(ngModel)]="room.isApprove" class="mb-md">
+                            <label nz-radio [nzValue]="o.value" *ngFor="let o of isApproves">
+                                <span>{{o.text}}</span>
+                            </label>
+                        </nz-radio-group>
+                        <nz-form-explain *ngIf="validateForm.get('isApprove').dirty&&validateForm.get('isApprove').hasError('required')">请选择审批类型</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row *ngIf="room.isApprove == true">
+                    <nz-form-label nz-col [nzSm]="4" nzFor="managerName">会议室管理员</nz-form-label>
+                    <nz-form-control [nzSm]="16" style="float:left" nzHasFeedback>
+                        <input nz-input readonly="readonly" placeholder="请选择管理员" formControlName="managerName" id="managerName" [(ngModel)]="room.managerName">
+                        <nz-form-explain *ngIf="validateForm.get('managerName').dirty&&validateForm.get('managerName').hasError('maxlength')">字符长度小于等于200</nz-form-explain>
+                    </nz-form-control>
+                    <nz-form-control [nzSm]="4" style="float: right;">
+                        <button nz-button type="button" nzType="primary" (click)="showModal()" style="margin-left: 20px">选择管理员</button>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzRequired nzFor="num">坐席人数</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <input nz-input formControlName="num" id="num" [(ngModel)]="room.num">
+                        <nz-form-explain *ngIf="validateForm.get('num').dirty&&validateForm.get('num').hasError('required')">请输入坐席人数</nz-form-explain>
+                        <nz-form-explain *ngIf="validateForm.get('num').dirty&&validateForm.get('num').hasError('pattern')">请输入正整数</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzFor="row">坐席排数</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <input nz-input formControlName="row" id="row" [(ngModel)]="room.row">
+                        <nz-form-explain *ngIf="validateForm.get('row').dirty&&validateForm.get('row').hasError('pattern')">请输入正整数</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzFor="column">坐席列数</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <input nz-input formControlName="column" id="column" [(ngModel)]="room.column">
+                        <nz-form-explain *ngIf="validateForm.get('column').dirty&&validateForm.get('column').hasError('pattern')">请输入正整数</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzFor="address">地址</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <input nz-input formControlName="address" id="address" [(ngModel)]="room.address">
+                        <nz-form-explain *ngIf="validateForm.get('address').dirty&&validateForm.get('address').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzFor="buildDesc">楼层信息</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <input nz-input formControlName="buildDesc" id="buildDesc" [(ngModel)]="room.buildDesc">
+                        <nz-form-explain *ngIf="validateForm.get('buildDesc').dirty&&validateForm.get('buildDesc').hasError('maxlength')">字符长度小于等于200</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzFor="remark">备注</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <input nz-input formControlName="remark" id="remark" [(ngModel)]="room.remark">
+                        <nz-form-explain *ngIf="validateForm.get('remark').dirty&&validateForm.get('remark').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzFor="column">会议室配置</nz-form-label>
+                    <nz-form-control [nzSm]="20">
+                        <nz-checkbox-group formControlName="devices" [(ngModel)]="deviceList"></nz-checkbox-group>
+                    </nz-form-control>
 
-                    </nz-form-item>
+                </nz-form-item>
 
-                </div>
             </div>
-            <!-- <div class="custom-modal-footer">
+        </div>
+        <!-- <div class="custom-modal-footer">
                 <div class="custom-modal-footter-group">
                     <button nz-button [nzType]="'default'" (click)="return()">
                     {{l("返回")}}
@@ -132,18 +131,17 @@
                   </button>
                 </div>
             </div> -->
-        </form>
-        <footer-toolbar errorCollect>
-            <button nz-button [nzType]="'default'" (click)="return()">
-                {{l("返回")}}
-            </button>
-            <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)" [nzLoading]="isConfirmLoading">
-                {{l("删除")}}
-            </button>
-            <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading" [disabled]="!validateForm.valid">
-                {{l("保存")}}
-              </button>
-        </footer-toolbar>
-    </nz-card>
+    </form>
+    <footer-toolbar errorCollect>
+        <button nz-button [nzType]="'default'" (click)="return()">
+            {{l("返回")}}
+        </button>
+        <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)" [nzLoading]="isConfirmLoading">
+            {{l("删除")}}
+        </button>
+        <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading" [disabled]="!validateForm.valid">
+            {{l("保存")}}
+        </button>
+    </footer-toolbar>
 </nz-card>
 <message-employee-modal #selectsEmployeeModal (modalSelect)="getSelectData($event)"></message-employee-modal>
