--- a/ng-admin/src/tobacco-management/schedule/schedule-detail/assign-task/assign-task.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule-detail/assign-task/assign-task.component.html
@@ -1,60 +1,60 @@
-<page-header [title]=""></page-header>
-<nz-card [nzBordered]="false">
-    <div nz-row>
-        <div nz-col nzSpan="8">
-            <div style="padding-left:10px; padding-right:10px;">
-                <nz-tree [(ngModel)]="nodes" (nzClick)="activeNode($event)" [nzDefaultSelectedKeys]="selectedKeys" [nzDefaultExpandAll]="true">
-                </nz-tree>
-            </div>
-        </div>
-        <div nz-col nzSpan="16">
-            <div nz-row [nzGutter]="24">
-                <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
-                    <!-- <button nz-button [nzType]="'default'" (click)="return()">
-                                {{l("返回")}}
-                            </button> -->
-                    <button *ngIf="isPush == 'true'" nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading">
-                                {{l("保存当前")}}
-                            </button>
+<nz-card [nzBordered]="false" nzTitle="任务指派">
+    <nz-card [nzBordered]="false">
+        <div nz-row>
+            <div nz-col nzSpan="8">
+                <div style="padding-left:10px; padding-right:10px;">
+                    <nz-tree [(ngModel)]="nodes" (nzClick)="activeNode($event)" [nzDefaultSelectedKeys]="selectedKeys" [nzDefaultExpandAll]="true">
+                    </nz-tree>
                 </div>
             </div>
-            <nz-table #nzTable [nzData]="growerList" [nzShowPagination]="false" [nzScroll]="{ y: '700px' }">
+            <div nz-col nzSpan="16">
+                <div nz-row [nzGutter]="24">
+                    <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
+                        <!-- <button nz-button [nzType]="'default'" (click)="return()">
+                                {{l("返回")}}
+                            </button> -->
+                        <button *ngIf="isPush == 'true'" nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading">
+                                {{l("保存当前")}}
+                            </button>
+                    </div>
+                </div>
+                <nz-table #nzTable [nzData]="growerList" [nzShowPagination]="false" [nzScroll]="{ y: '700px' }">
 
-                <thead>
-                    <tr>
-                        <th nz-th>
-                            <label nz-checkbox [(ngModel)]="isSelectedAll" (ngModelChange)="checkAll($event)">
+                    <thead>
+                        <tr>
+                            <th nz-th>
+                                <label nz-checkbox [(ngModel)]="isSelectedAll" (ngModelChange)="checkAll($event)">
                                 </label>
-                        </th>
-                        <th>姓名</th>
-                        <th>单位名称</th>
-                        <th>电话号码</th>
-                        <th>拜访次数</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let item of nzTable.data">
-                        <td nz-td>
-                            <label nz-checkbox [(ngModel)]="item.checked" (ngModelChange)="isCancelCheck($event)">
+                            </th>
+                            <th>姓名</th>
+                            <th>单位名称</th>
+                            <th>电话号码</th>
+                            <th>拜访次数</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of nzTable.data">
+                            <td nz-td>
+                                <label nz-checkbox [(ngModel)]="item.checked" (ngModelChange)="isCancelCheck($event)">
                                 </label>
-                        </td>
-                        <td>{{item.name}}</td>
-                        <td>{{item.unitName}}</td>
-                        <td>{{item.tel}}</td>
-                        <td>
-                            <nz-input-number [nzPrecision]="0" [(ngModel)]="item.visitNum" [nzMin]="0"></nz-input-number>
-                        </td>
-                    </tr>
-                </tbody>
-            </nz-table>
+                            </td>
+                            <td>{{item.name}}</td>
+                            <td>{{item.unitName}}</td>
+                            <td>{{item.tel}}</td>
+                            <td>
+                                <nz-input-number [nzPrecision]="0" [(ngModel)]="item.visitNum" [nzMin]="0"></nz-input-number>
+                            </td>
+                        </tr>
+                    </tbody>
+                </nz-table>
+            </div>
         </div>
-    </div>
-</nz-card>
-<footer-toolbar>
-    <button nz-button [nzType]="'default'" (click)="return()">
+    </nz-card>
+    <footer-toolbar>
+        <button nz-button [nzType]="'default'" (click)="return()">
             {{l("返回")}}
         </button>
-    <!-- <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading">
+        <!-- <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading">
             {{l("保存")}}
         </button> -->
-</footer-toolbar>
+    </footer-toolbar>
