--- a/ng-admin/src/tobacco-management/visit-task/task-detail/task-detail.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/task-detail/task-detail.component.html
@@ -1,90 +1,88 @@
 <!-- <pro-header></pro-header> -->
-<nz-card [nzBordered]="false">
-    <nz-card [nzBordered]="false">
-        <form nz-form [formGroup]="validateForm" *ngIf="task">
-            <div nz-row>
-                <div nz-col [nzSpan]="16">
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzRequired>任务名称</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="name" [(ngModel)]="task.name" id="name">
-                            <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('maxlength')">字符长度小于等于50</nz-form-explain>
-                            <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('required')">请输入烟农姓名</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row style="margin-bottom: 0px;">
-                        <nz-form-label nz-col [nzSm]="4" nzRequired>任务类型</nz-form-label>
-                        <nz-form-control nz-col [nzSm]="20">
-                            <nz-radio-group formControlName="type" [(ngModel)]="task.type" class="mb-md">
-                                <label nz-radio [nzValue]="o.value" *ngFor="let o of types">
+<nz-card [nzBordered]="false" nzTitle="任务详情">
+    <form nz-form [formGroup]="validateForm" *ngIf="task">
+        <div nz-row>
+            <div nz-col [nzSpan]="16">
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzRequired>任务名称</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <input nz-input formControlName="name" [(ngModel)]="task.name" id="name">
+                        <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('maxlength')">字符长度小于等于50</nz-form-explain>
+                        <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('required')">请输入烟农姓名</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row style="margin-bottom: 0px;">
+                    <nz-form-label nz-col [nzSm]="4" nzRequired>任务类型</nz-form-label>
+                    <nz-form-control nz-col [nzSm]="20">
+                        <nz-radio-group formControlName="type" [(ngModel)]="task.type" class="mb-md">
+                            <label nz-radio [nzValue]="o.value" *ngFor="let o of types">
                                     <span>{{o.text}}</span>
                                 </label>
-                            </nz-radio-group>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row style="margin-bottom: 0px;">
-                        <nz-form-label nz-col [nzSm]="4" nzFor="isExamine" nzRequired>是否需要考核</nz-form-label>
-                        <nz-form-control nz-col [nzSm]="20">
-                            <nz-radio-group formControlName="isExamine" [(ngModel)]="task.isExamine" class="mb-md">
-                                <label nz-radio [nzValue]="o.value" *ngFor="let o of isExamines">
+                        </nz-radio-group>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row style="margin-bottom: 0px;">
+                    <nz-form-label nz-col [nzSm]="4" nzFor="isExamine" nzRequired>是否需要考核</nz-form-label>
+                    <nz-form-control nz-col [nzSm]="20">
+                        <nz-radio-group formControlName="isExamine" [(ngModel)]="task.isExamine" class="mb-md">
+                            <label nz-radio [nzValue]="o.value" *ngFor="let o of isExamines">
                                     <span>{{o.text}}</span>
                                 </label>
-                            </nz-radio-group>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzFor="desc">任务描述</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <textarea nz-input row="3" formControlName="desc" id="desc" [(ngModel)]="task.desc"></textarea>
-                            <nz-form-explain *ngIf="validateForm.get('desc').dirty&&validateForm.get('desc').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                </div>
+                        </nz-radio-group>
+                    </nz-form-control>
+                </nz-form-item>
+                <nz-form-item nz-row>
+                    <nz-form-label nz-col [nzSm]="4" nzFor="desc">任务描述</nz-form-label>
+                    <nz-form-control [nzSm]="20" nzHasFeedback>
+                        <textarea nz-input row="3" formControlName="desc" id="desc" [(ngModel)]="task.desc"></textarea>
+                        <nz-form-explain *ngIf="validateForm.get('desc').dirty&&validateForm.get('desc').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
+                    </nz-form-control>
+                </nz-form-item>
             </div>
-        </form>
-        <form *ngIf="task.isExamine == true" nz-form (ngSubmit)="refreshData(false,true)" [nzLayout]="'inline'">
-            <div nz-row [nzGutter]="24">
-                <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
-                    <button nz-button type="button" (click)="showModal(null)" nzType="primary">
+        </div>
+    </form>
+    <form *ngIf="task.isExamine == true" nz-form (ngSubmit)="refreshData(false,true)" [nzLayout]="'inline'">
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
+                <button nz-button type="button" (click)="showModal(null)" nzType="primary">
                         <i class="anticon anticon-plus"></i>
                         <span>新增考核项</span>
                     </button>
-                </div>
             </div>
-        </form>
-        <ng-template *ngIf="task.isExamine == true" #totalTemplate let-total>共 {{query.total}} 条</ng-template>
-        <nz-table *ngIf="task.isExamine == true" #nzTable [nzData]="taskExamineList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
-            (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
-            <thead>
-                <tr>
-                    <th>考核项名称</th>
-                    <th>考核项描述</th>
-                    <th>考核项序号</th>
-                    <th>操作</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let data of nzTable.data">
-                    <td>{{data.name}}</td>
-                    <td>{{data.desc}}</td>
-                    <td>{{data.seq}}</td>
-                    <td>
-                        <a (click)="deleteExamine(data)">删除</a>
-                    </td>
-                </tr>
-            </tbody>
-        </nz-table>
-        <footer-toolbar errorCollect>
-            <button nz-button [nzType]="'default'" (click)="return()">
+        </div>
+    </form>
+    <ng-template *ngIf="task.isExamine == true" #totalTemplate let-total>共 {{query.total}} 条</ng-template>
+    <nz-table *ngIf="task.isExamine == true" #nzTable [nzData]="taskExamineList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
+        (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
+        <thead>
+            <tr>
+                <th>考核项名称</th>
+                <th>考核项描述</th>
+                <th>考核项序号</th>
+                <th>操作</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let data of nzTable.data">
+                <td>{{data.name}}</td>
+                <td>{{data.desc}}</td>
+                <td>{{data.seq}}</td>
+                <td>
+                    <a (click)="deleteExamine(data)">删除</a>
+                </td>
+            </tr>
+        </tbody>
+    </nz-table>
+    <footer-toolbar errorCollect>
+        <button nz-button [nzType]="'default'" (click)="return()">
                 {{l("返回")}}
             </button>
-            <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)" [nzLoading]="isConfirmLoading">
+        <button nz-button *ngIf="isDelete" [nzType]="'danger'" (click)="delete(deleteContent)" [nzLoading]="isConfirmLoading">
                 {{l("删除")}}
             </button>
-            <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading" [disabled]="!validateForm.valid">
+        <button nz-button [nzType]="'primary'" type="button" (click)="save()" [nzLoading]="isConfirmLoading" [disabled]="!validateForm.valid">
                 {{l("保存")}}
             </button>
-        </footer-toolbar>
-    </nz-card>
+    </footer-toolbar>
 </nz-card>
 <examine-detail-modal #selectExamineModal (modalSelect)="getSelectData($event)"></examine-detail-modal>
