--- a/ng-admin/src/configs/data-config/data-config.component.html
+++ b/ng-admin/src/configs/data-config/data-config.component.html
@@ -11,6 +11,13 @@
                         <span>{{item.text}}</span>
                     </label>
                 </nz-radio-group>
+
+                <!-- <ul nz-menu [nzMode]="'vertical'" *ngFor="let item of configLeaf" style="width: 240px;">
+                    <li nz-menu-item>
+                        <span title>
+                            <i class="anticon anticon-mail"></i> {{item.text}}</span>
+                    </li>
+                </ul> -->
             </div>
             <div nz-col [nzSpan]="18">
                 <ng-template #deleteContent>
