--- a/ng-admin/src/tobacco-management/report-form/report-form.component.html
+++ b/ng-admin/src/tobacco-management/report-form/report-form.component.html
@@ -46,7 +46,7 @@
                 </div>
                 <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                     <button nz-button type="submit" [nzType]="'primary'" class="mx-sm">查询</button>
-                    <button nz-button type="reset" (click)="getSheduleSum(true)" class="mx-sm">重置</button>
+                    <button nz-button type="button" (click)="getSheduleSum(true)" class="mx-sm">重置</button>
                 </div>
             </div>
         </form>
@@ -161,7 +161,7 @@
                 </div>
                 <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                     <button nz-button type="submit" [nzType]="'primary'" class="mx-sm">查询</button>
-                    <button nz-button type="reset" (click)="getSheDulDetailByTask(true)" class="mx-sm">重置</button>
+                    <button nz-button type="button" (click)="getSheDulDetailByTask(true)" class="mx-sm">重置</button>
                 </div>
             </div>
         </form>
