烟草图标修改

--- a/ng-admin/src/account/account.component.html
+++ b/ng-admin/src/account/account.component.html
@@ -4,7 +4,7 @@
             <img class="logo" src="/assets/images/logos/loginLogo.jpg">
         </div> -->
         <div class="text-center" style="color:white;">
-            <img style="height: 170px;" src="/assets/images/logos/loginLogo.jpg"></div>
+            <img style="height: 170px;" src="/assets/images/logos/Logo.png"></div>
         <div *ngIf="showTenantChange()">
             <tenant-change></tenant-change>
         </div>
