--- a/ng-admin/src/app/users/create-user/create-user.component.html
+++ b/ng-admin/src/app/users/create-user/create-user.component.html
@@ -6,6 +6,7 @@
 
 
     <form nz-form [formGroup]="validateForm" (ngSubmit)="submit()" *ngIf="user">
+        <!-- <form nz-form [formGroup]="validateForm" *ngIf="user"> -->
         <nz-tabset>
             <nz-tab [nzTitle]="l('UserDetails')">
                 <!-- 用户账号 -->
@@ -21,12 +22,22 @@
                 <!-- 名 / 姓名 -->
                 <nz-form-item>
                     <nz-form-control nzHasFeedback>
+                        <nz-input-group nzSearch [nzSuffix]="suffixIconButton">
+                            <input readonly="readonly" [(ngModel)]="user.name" nz-input formControlName="name" id="name" placeholder="请选择员工">
+                            <ng-template #suffixIconButton>
+                                <button nz-button type="button" nzType="primary" (click)="showModal()" nzSearch>选择员工</button>
+                            </ng-template>
+                        </nz-input-group>
+                    </nz-form-control>
+                </nz-form-item>
+                <!-- <nz-form-item>
+                    <nz-form-control nzHasFeedback>
                         <input nz-input formControlName="name" [placeholder]="l('Surname')" autocomplete="name">
                         <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').errors">
                             <ng-container *ngIf="validateForm.get('name').hasError('required')">{{l('CanNotNull')}}</ng-container>
                         </nz-form-explain>
                     </nz-form-control>
-                </nz-form-item>
+                </nz-form-item> -->
                 <!--  <nz-col [nzSpan]="12">
             <nz-form-control nzHasFeedback>
               <input nz-input formControlName="surname" [placeholder]="l('Surname')">
@@ -97,3 +108,4 @@
 
     </form>
 </div>
+<chooese-employee-modal #selectsEmployeeModal (modalSelect)="getSelectData($event)"></chooese-employee-modal>
