--- a/ng-admin/src/basic-data/grower/grower.component.html
+++ b/ng-admin/src/basic-data/grower/grower.component.html
@@ -19,6 +19,17 @@
                     </nz-form-control>
                 </nz-form-item>
             </div>
+            <div nz-col [nzSpan]="8" class="mb-md">
+                <nz-form-item class="d-flex">
+                    <nz-form-label nzFor="area">区县</nz-form-label>
+                    <nz-form-control class="flex-1">
+                        <nz-select [nzPlaceHolder]="'请选择区县'" name="area" [(ngModel)]="search.area" [nzShowSearch]="true">
+                            <nz-option *ngFor="let i of areaTypes" [nzLabel]="i.text" [nzValue]="i.value">
+                            </nz-option>
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
             <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                 <button nz-button type="submit" nzType="primary" [nzLoading]="loading">查询</button>
                 <button nz-button type="reset" (click)="refreshData(true)" class="mx-sm">重置</button>
@@ -30,16 +41,15 @@
         </div>
     </form>
     <ng-template #totalTemplate let-total>共 {{query.total}} 条</ng-template>
-    <nz-table #nzTable [nzData]="growerList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate"
-        [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
-        (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
+    <nz-table #nzTable [nzData]="growerList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true" (nzPageIndexChange)="refreshData()"
+        (nzPageSizeChange)="refreshData()">
         <thead>
             <tr>
                 <th>用户名</th>
                 <th>单位名称</th>
                 <th>联系方式</th>
+                <th>区县</th>
                 <th>所属烟技员</th>
-                <!-- <th>地理位置</th> -->
                 <th>操作</th>
             </tr>
         </thead>
@@ -48,6 +58,7 @@
                 <td>{{data.name}}</td>
                 <td>{{data.unitName}}</td>
                 <td>{{data.tel}}</td>
+                <td>{{data.area}}</td>
                 <td>{{data.employeeName}}</td>
                 <td>
                     <a (click)="goDetail(data.id)">详细信息</a>
