--- a/ng-admin/src/tobacco-management/visit-task/task-detail/examine-detail-modal/examine-detail-modal.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/task-detail/examine-detail-modal/examine-detail-modal.component.html
@@ -1,31 +1,31 @@
-<nz-modal [(nzVisible)]="isVisible" nzWidth="1024px" nzMaskClosable="false" nzTitle="新建考核项" [nzContent]="modalContent" (nzOnCancel)="handleCancel()" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="isVisible" nzWidth="760px" nzMaskClosable="false" nzTitle="新建考核项" [nzContent]="modalContent" (nzOnCancel)="handleCancel()" style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
-        <nz-card [nzBordered]="false" *ngIf="isVisible">
-            <form nz-form [formGroup]="validateForm" *ngIf="taskExamine">
-                <nz-form-item nz-row>
-                    <nz-form-label nz-col [nzSm]="4" nzFor="teName" nzRequired>考核项名称</nz-form-label>
-                    <nz-form-control [nzSm]="20" nzHasFeedback>
-                        <input nz-input formControlName="teName" id="teName" [(ngModel)]="taskExamine.name">
-                        <nz-form-explain *ngIf="validateForm.get('teName').dirty&&validateForm.get('teName').hasError('maxlength')">字符长度小于等于50</nz-form-explain>
-                        <nz-form-explain *ngIf="validateForm.get('teName').dirty&&validateForm.get('teName').hasError('required')">请输入考核项名称</nz-form-explain>
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item nz-row>
-                    <nz-form-label nz-col [nzSm]="4" nzFor="teDesc">考核项描述</nz-form-label>
-                    <nz-form-control [nzSm]="20" nzHasFeedback>
-                        <textarea nz-input row="3" formControlName="teDesc" id="teDesc" [(ngModel)]="taskExamine.desc"></textarea>
-                        <nz-form-explain *ngIf="validateForm.get('teDesc').dirty&&validateForm.get('teDesc').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
-                    </nz-form-control>
-                </nz-form-item>
-                <nz-form-item nz-row>
-                    <nz-form-label nz-col [nzSm]="4" nzFor="teSeq">考核项序号</nz-form-label>
-                    <nz-form-control [nzSm]="20" nzHasFeedback>
-                        <input nz-input formControlName="teSeq" id="teSeq" [(ngModel)]="taskExamine.seq">
-                        <nz-form-explain *ngIf="validateForm.get('teSeq').dirty&&validateForm.get('teSeq').hasError('pattern')">请输入正整数</nz-form-explain>
-                    </nz-form-control>
-                </nz-form-item>
-            </form>
-        </nz-card>
+        <!-- <nz-card [nzBordered]="false" *ngIf="isVisible"> -->
+        <form nz-form [formGroup]="validateForm" *ngIf="taskExamine">
+            <nz-form-item nz-row>
+                <nz-form-label nz-col [nzSm]="4" nzFor="teName" nzRequired>考核项名称</nz-form-label>
+                <nz-form-control [nzSm]="20" nzHasFeedback>
+                    <input nz-input formControlName="teName" id="teName" [(ngModel)]="taskExamine.name">
+                    <nz-form-explain *ngIf="validateForm.get('teName').dirty&&validateForm.get('teName').hasError('maxlength')">字符长度小于等于50</nz-form-explain>
+                    <nz-form-explain *ngIf="validateForm.get('teName').dirty&&validateForm.get('teName').hasError('required')">请输入考核项名称</nz-form-explain>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item nz-row>
+                <nz-form-label nz-col [nzSm]="4" nzFor="teDesc">考核项描述</nz-form-label>
+                <nz-form-control [nzSm]="20" nzHasFeedback>
+                    <textarea nz-input row="3" formControlName="teDesc" id="teDesc" [(ngModel)]="taskExamine.desc"></textarea>
+                    <nz-form-explain *ngIf="validateForm.get('teDesc').dirty&&validateForm.get('teDesc').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item nz-row>
+                <nz-form-label nz-col [nzSm]="4" nzFor="teSeq">考核项序号</nz-form-label>
+                <nz-form-control [nzSm]="20" nzHasFeedback>
+                    <input nz-input formControlName="teSeq" id="teSeq" [(ngModel)]="taskExamine.seq">
+                    <nz-form-explain *ngIf="validateForm.get('teSeq').dirty&&validateForm.get('teSeq').hasError('pattern')">请输入正整数</nz-form-explain>
+                </nz-form-control>
+            </nz-form-item>
+        </form>
+        <!-- </nz-card> -->
     </ng-template>
     <ng-template #modalFooter>
         <button nz-button [nzType]="'default'" type="button" (click)="handleCancel($event)">
