--- a/ng-admin/src/basic-data/employee/employee.component.html
+++ b/ng-admin/src/basic-data/employee/employee.component.html
@@ -30,8 +30,8 @@
                     </div>
                     <div nz-form-control class="flex-1">
                         <nz-select [nzPlaceHolder]="'请选择部门'" name="status" [(ngModel)]="search.status" [nzShowSearch]="true">
-                            <nz-option *ngFor="let i of departMent" [nzLabel]="i.text" [nzValue]="i.value">
-                            </nz-option>
+                            <!-- <nz-option *ngFor="let i of departMent" [nzLabel]="i.text" [nzValue]="i.value">
+                            </nz-option> -->
                         </nz-select>
                     </div>
                 </div>
