--- a/ng-admin/src/basic-data/organization/organization.component.html
+++ b/ng-admin/src/basic-data/organization/organization.component.html
@@ -121,4 +121,5 @@
         </div>
     </div>
 </nz-card>
-<area-detail-modal #selectModal (modalSelect)="getSelectData($event) "></area-detail-modal>
+<area-detail-modal #selectModal></area-detail-modal>
+<!-- <area-detail-modal #selectModal (modalSelect)="getSelectData($event) "></area-detail-modal> -->
