--- a/ng-admin/src/basic-data/organization/area-detail-modal/area-detail-modal.component.html
+++ b/ng-admin/src/basic-data/organization/area-detail-modal/area-detail-modal.component.html
@@ -1,4 +1,4 @@
-<nz-modal [(nzVisible)]="isVisible" nzMaskClosable="false" nzTitle="区县维护" [nzContent]="modalContent" (nzOnCancel)="handleCancel()" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="isVisible" nzMaskClosable="false" nzTitle="区县维护" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
         <form nz-form [formGroup]="validateForm" *ngIf="employee">
             <div nz-row nzGutter="16">
