--- a/ng-admin/src/layout/default/change-password/change-password.component.html
+++ b/ng-admin/src/layout/default/change-password/change-password.component.html
@@ -4,7 +4,7 @@
     </nz-modal>
 </form> -->
 
-<nz-modal [(nzVisible)]="modalVisible" nzMaskClosable="false" nzTitle="修改密码" [nzContent]="modalContent" (nzOnCancel)="handleCancel()" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="modalVisible" nzMaskClosable="false" nzTitle="修改密码" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
         <form nz-form [formGroup]="validateForm" *ngIf="modalVisible">
             <nz-form-item nz-row>
