--- a/ng-admin/src/tobacco-management/schedule/schedule-detail/choose-employee-modal/choose-employee-modal.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule-detail/choose-employee-modal/choose-employee-modal.component.html
@@ -1,4 +1,4 @@
-<nz-modal [(nzVisible)]="isVisible" nzWidth="1024px" nzMaskClosable="false" nzTitle="任务指派" [nzContent]="modalContent" (nzOnCancel)="handleCancel()" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="isVisible" nzWidth="1024px" nzMaskClosable="false" nzTitle="任务指派" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
         <nz-card [nzBordered]="false" *ngIf="isVisible">
             <div nz-row>
