--- a/ng-admin/src/tobacco-management/visit-task/task-detail/examine-detail-modal/examine-detail-modal.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/task-detail/examine-detail-modal/examine-detail-modal.component.html
@@ -1,4 +1,4 @@
-<nz-modal [(nzVisible)]="isVisible" nzWidth="760px" nzMaskClosable="false" nzTitle="新建考核项" [nzContent]="modalContent" (nzOnCancel)="handleCancel()" style="width: 520px;" [nzFooter]="modalFooter">
+<nz-modal [(nzVisible)]="isVisible" nzWidth="760px" nzMaskClosable="false" nzTitle="新建考核项" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" style="width: 520px;" [nzFooter]="modalFooter">
     <ng-template #modalContent>
         <!-- <nz-card [nzBordered]="false" *ngIf="isVisible"> -->
         <form nz-form [formGroup]="validateForm" *ngIf="taskExamine">
