--- a/ng-admin/src/tobacco-management/report-form/report-form.component.html
+++ b/ng-admin/src/tobacco-management/report-form/report-form.component.html
@@ -45,6 +45,14 @@
                         </nz-form-control>
                     </nz-form-item>
                 </div>
+                <div nz-col [nzSpan]="8" class="mb-md">
+                    <nz-form-item class="d-flex">
+                        <nz-form-label nzFor="taskId">计划名</nz-form-label>
+                        <nz-form-control class="flex-1">
+                            <input nz-input name="sheduleName" placeholder="计划名" [(ngModel)]="sumSearch.sheduleName">
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
                 <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                     <button nz-button type="submit" [nzType]="'primary'" class="mx-sm">查询</button>
                     <button nz-button type="button" (click)="getSheduleSum(true)" class="mx-sm">重置</button>
@@ -63,6 +71,12 @@
                 <tr>
                     <th>
                         <span>区域</span>
+                    </th>
+                    <th>
+                        <span>计划名</span>
+                    </th>
+                    <th>
+                        <span>计划时间</span>
                     </th>
                     <th>
                         <span>任务名</span>
@@ -87,6 +101,8 @@
             <tbody>
                 <tr *ngFor="let sum of nzTable.data">
                     <td>{{sum.areaName}}</td>
+                    <td>{{sum.sheduleName}}</td>
+                    <td>{{sum.time}}</td>
                     <td>{{sum.taskName}}</td>
                     <td>{{sum.taskTypeName}}</td>
                     <td>{{sum.total}}</td>
@@ -96,6 +112,8 @@
                 </tr>
                 <tr>
                     <td>总计：</td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td>{{totalSum}}</td>
@@ -145,14 +163,6 @@
                 </div>
                 <div nz-col [nzSpan]="8" class="mb-md">
                     <nz-form-item class="d-flex">
-                        <nz-form-label nzFor="taskId">时间范围</nz-form-label>
-                        <nz-form-control class="flex-1">
-                            <nz-range-picker name="dateRangeDe" [(ngModel)]="dateRangeDe" [nzFormat]="shedateFormatDe" (ngModelChange)="changeTimeDe($event)"></nz-range-picker>
-                        </nz-form-control>
-                    </nz-form-item>
-                </div>
-                <div nz-col [nzSpan]="8" class="mb-md">
-                    <nz-form-item class="d-flex">
                         <nz-form-label nzFor="taskId">烟农名</nz-form-label>
                         <nz-form-control class="flex-1">
                             <input nz-input name="growerName" placeholder="烟农名" [(ngModel)]="detailSearch.growerName">
@@ -164,6 +174,22 @@
                         <nz-form-label nzFor="taskId">烟技员名</nz-form-label>
                         <nz-form-control class="flex-1">
                             <input nz-input name="employeeName" placeholder="烟技员名" [(ngModel)]="detailSearch.employeeName">
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+                <div nz-col [nzSpan]="8" class="mb-md">
+                    <nz-form-item class="d-flex">
+                        <nz-form-label nzFor="taskId">计划名</nz-form-label>
+                        <nz-form-control class="flex-1">
+                            <input nz-input name="sheduleName" placeholder="计划名" [(ngModel)]="detailSearch.sheduleName">
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+                <div nz-col [nzSpan]="8" class="mb-md">
+                    <nz-form-item class="d-flex">
+                        <nz-form-label nzFor="taskId">时间范围</nz-form-label>
+                        <nz-form-control class="flex-1">
+                            <nz-range-picker name="dateRangeDe" [(ngModel)]="dateRangeDe" [nzFormat]="shedateFormatDe" (ngModelChange)="changeTimeDe($event)"></nz-range-picker>
                         </nz-form-control>
                     </nz-form-item>
                 </div>
@@ -188,6 +214,12 @@
                 <tr>
                     <th>
                         <span>区域</span>
+                    </th>
+                    <th>
+                        <span>计划名</span>
+                    </th>
+                    <th>
+                        <span>计划时间</span>
                     </th>
                     <th>
                         <span>任务名</span>
@@ -221,6 +253,8 @@
             <tbody>
                 <tr *ngFor="let sum of nzTable1.data">
                     <td>{{sum.areaName}}</td>
+                    <td>{{sum.sheduleName}}</td>
+                    <td>{{sum.time}}</td>
                     <td>{{sum.taskName}}</td>
                     <td>{{sum.typeName}}</td>
                     <td>{{sum.visitNum}}</td>
